updated site changes.

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
            <center>
              <div class="main">
-                <h2><a href="tour">TOUR</a> &nbsp  <a href="music">MUSIC</a> &nbsp <a href="videos">VIDEOS</a> &nbsp <a href="http://shop.070shake.com">MERCH</a> &nbsp <a href="gallery">GALLERY</a> </h2> 
+                <h2><a href="tour/index.html">TOUR</a> &nbsp  <a href="music/index.html">MUSIC</a> &nbsp <a href="videos/index.html">VIDEOS</a> &nbsp <a href="http://shop.070shake.com">MERCH</a> &nbsp <a href="http://photos.070shake.com">PHOTOS</a> </h2> 
              </div>
             </center> 
 
