--- a/music/index.html
+++ b/music/index.html
@@ -1,5 +1,3 @@
-<!-- www.alsina.xyz | Alchemically bonded by Sebastian Alsina (@youngseebi) -->
-
 <!doctype html>
 <html lang="en">
 
@@ -7,21 +5,51 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
+      <!--
+
+
+     ⌌                                                    ⌍
+          ___  _____  ___    ____   _   _     _     _  __ _____ 
+  / _ \|___  |/ _ \  / ___| | | | |   / \   | |/ /| ____|
+ | | | |  / /| | | | \___ \ | |_| |  / _ \  | ' / |  _|  
+ | |_| | / / | |_| |  ___) ||  _  | / ___ \ | . \ | |___ 
+  \___/ /_/   \___/  |____/ |_| |_|/_/   \_\|_|\_\|_____|
+                                                         
+
+       yourmobilegeek.tech ( @yourmobilegeek was here ) • made in florida
+       www.alsina.xyz | Alchemically bonded by Sebastian Alsina (@youngseebi)
+     ⌎                 
+  -->
+
     <!-- Page Information -->
-    <title>070Shake &raquo; Videos</title>
-    <meta name="author" content="Sebastian Alsina" />
-    <meta name="description" content="" />
-    <meta property="og:title" content="" />
-    <meta property="og:type" content="website" />
-    <meta property="og:url" content="" />
-    <meta property="og:image" content="" />
-    <meta property="og:description" content="" />
-    <meta name="twitter:card" value="summary">
+    <title> MUSIC | 070 SHAKE </title>
+    <meta name="keywords" content="070 Shake , 070 , Project 070 , Shake The World , New Jersey , North Bergen , Tour , Tickets">
+    <meta property="og:title" content="070 SHAKE">
+    <meta property="og:description" content="070 SHAKE">
+    <meta property="og:url" content="http://www.070shake.com">
+    <meta property="og:site_name" content="070 SHAKE OFFICIAL SITE">
+    <meta property="og:type" content="website">
+    <meta name="twitter:url" content="http://www.070shake.com">
+    <meta name="twitter:title" content="070 SHAKE">
+    <meta property="og:image" content="https://070shake.com/assets/starsphere.jpg">
+    <meta name="twitter:image" content="https://070shake.com/assets/starsphere.jpg">
+
 
     <!-- CSS -->
     <link rel="stylesheet" href="../css/reset.css" type="text/css">
     <link rel="stylesheet" href="../css/master.css" type="text/css">
     <link rel="stylesheet" href="../css/main.css" type="text/css">
+
+    <!-- Favicon -->
+    <link rel="shortcut icon" href="../images/favicon.png" type="image/x-icon">
+    <link rel="apple-touch-icon-precomposed" sizes="57x57" href="/apple-touch-icon-57x57.png">
+    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="/apple-touch-icon-114x144.png">
+    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="/apple-touch-icon-72x72.png">
+    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="/apple-touch-icon-144x144.png">
+    <meta name="apple-mobile-web-app-title" content="070 - Shake The World">
+    <meta name="application-name" content="070 Shake">
+    <meta name="msapplication-TileColor" content="#5b3c70">
+    <meta name="msapplication-TileImage" content="/mstile-144x144.png">
 
     <!-- JS -->
     <script src="http://code.jquery.com/jquery-latest.min.js"></script>
@@ -56,6 +84,8 @@
             <div class="overlay">
                 <div class="vertical-center">
                     <a href="https://soundcloud.com/070-shake/be-myself-prod-by-jsebastian"><i class="fa fa-soundcloud"></i></a>
+                    <a href="https://open.spotify.com/album/6bfMzBBgOt4CoB88WPn0Yc"><i class="fa fa-spotify"></i></a>
+                    <a href="https://itunes.apple.com/ca/album/be-myself-single/id1263353872"><i class="fa fa-apple"></i></a>
                 </div>
             </div>
             <img src="../img/music-art/be%20myself.png" alt="">
@@ -72,6 +102,8 @@
             <div class="overlay">
                 <div class="vertical-center">
                     <a href="https://soundcloud.com/offical070/sets/the-070-project-chapter-1"><i class="fa fa-soundcloud"></i></a>
+                    <a href="https://open.spotify.com/album/7x69WXBP364CVGl8IpQ8hx"><i class="fa fa-spotify"></i></a>
+                    <a href="https://itunes.apple.com/us/album/the-070-project-chapter-1/id1184086723"><i class="fa fa-apple"></i></a>
                 </div>
             </div>
             <img src="../img/music-art/070-project.png" alt="">
@@ -80,6 +112,8 @@
             <div class="overlay">
                 <div class="vertical-center">
                     <a href="https://soundcloud.com/1amradio/lil-yachty-shake-rewind-yesjulz-exclusive"><i class="fa fa-soundcloud"></i></a>
+                    <a href="https://open.spotify.com/album/2DFejL7tUEViwyLvLjf7ot"><i class="fa fa-spotify"></i></a>
+                    <a href="https://itunes.apple.com/ca/album/rewind-feat-lil-yachty/id1171239722?i=1171239915"><i class="fa fa-apple"></i></a>
                 </div>
             </div>
             <img src="../img/music-art/rewind.png" alt="">
@@ -88,6 +122,8 @@
             <div class="overlay">
                 <div class="vertical-center">
                     <a href="https://soundcloud.com/070-shake/stranger-prod-by-the-kompetition"><i class="fa fa-soundcloud"></i></a>
+                    <a href="https://open.spotify.com/album/650xbdr4W9mJfjh6fXNyot"><i class="fa fa-spotify"></i></a>
+                    <a href="https://itunes.apple.com/ca/album/stranger/id1229375694?i=1229375695"><i class="fa fa-apple"></i></a>
                 </div>
             </div>
             <img src="../img/music-art/stranger.png" alt="">
@@ -96,6 +132,8 @@
             <div class="overlay">
                 <div class="vertical-center">
                     <a href="https://soundcloud.com/1amradio/shake-ralphy-river-honey"><i class="fa fa-soundcloud"></i></a>
+                    <a href="https://open.spotify.com/album/1UX5QXG2yPar5Tce7BUyyM"><i class="fa fa-spotify"></i></a>
+                    <a href="https://itunes.apple.com/ca/album/honey/id1144694504?i=1144694530"><i class="fa fa-apple"></i></a>
                 </div>
             </div>
             <img src="../img/music-art/honey.png" alt="">
@@ -104,6 +142,8 @@
             <div class="overlay">
                 <div class="vertical-center">
                     <a href="https://soundcloud.com/070-shake/trust-nobody"><i class="fa fa-soundcloud"></i></a>
+                    <a href="https://open.spotify.com/album/3y9TaHO02dcZnLLuZoAgFq"><i class="fa fa-spotify"></i></a>
+                    <a href="https://itunes.apple.com/ca/album/trust-nobody/id1157803530?i=1157803533"><i class="fa fa-apple"></i></a>
                 </div>
             </div>
             <img src="../img/music-art/trust%20nobody.png" alt="">
@@ -112,6 +152,8 @@
             <div class="overlay">
                 <div class="vertical-center">
                     <a href="https://soundcloud.com/070-shake/shake-make-it-there-prod-by-the-competition"><i class="fa fa-soundcloud"></i></a>
+                    <a href="https://open.spotify.com/album/45xkevyVWXgwf2wE07gZ6P"><i class="fa fa-spotify"></i></a>
+                    <a href="https://itunes.apple.com/ca/album/make-it-there/id1099378961?i=1099379051"><i class="fa fa-apple"></i></a>
                 </div>
             </div>
             <img src="../img/music-art/make-it-there.png" alt="">
@@ -136,6 +178,8 @@
             <div class="overlay">
                 <div class="vertical-center">
                     <a href="https://soundcloud.com/1amradio/shake-bass-prod-by-the-kompetition"><i class="fa fa-soundcloud"></i></a>
+                    <a href="https://open.spotify.com/album/2KvJcb4FSNenirSFsu6r1V"><i class="fa fa-spotify"></i></a>
+                    <a href="https://itunes.apple.com/ca/album/bass-for-my-thoughts/id1128992928?i=1128993128"><i class="fa fa-apple"></i></a>
                 </div>
             </div>
             <img src="../img/music-art/bass-for-my-thoughts.png" alt="">
@@ -197,6 +241,7 @@
                 <a href="https://070shake.com/music" target="_blank">MUSIC</a>
                 <a href="https://070shake.com/videos" target="_blank">VIDEOS</a>
                 <a href="https://shop.070shake.com" target="_blank">MERCH</a>
+                <a href="http://photos.070shake.com" target="_blank"> PHOTOS </a>
             </div>
 
             <h4 style="font-size: xx-small;">SITE DESIGNED BY <a href="https://www.twitter.com/yourmobilegeek"> ARIANA M. DAVIS </a> &amp; <a href="https://www.twitter.com/youngseebi"> SEBASTIAN ALSINA</a></h4>
@@ -208,7 +253,6 @@
                 <a href="https://soundcloud.com/shake-070" target="_blank"><i class="fa fa-soundcloud"></i></a>
                 <a href="https://www.facebook.com/070shake" target="_blank"><i class="fa fa-facebook"></i></a>
                 <a href="https://play.spotify.com/artist/12Zk1DFhCbHY6v3xep2ZjI" target="_blank"><i class="fa fa-spotify"></i></a>
-                <a href="https://play.google.com/store/music/artist/070_Shake?id=Apbver3j4h5vx44q3ahwjumpdwe&hl=en" target="_blank"><i class="fa fa-play"></i></a>
                 <a href="https://itunes.apple.com/ca/artist/070-shake/id1097177293" target="_blank"><i class="fa fa-apple"></i></a>
                 <a href="https://www.youtube.com/channel/UC3rStlVNedljwUZgmAgrU0w" target="_blank"><i class="fa fa-youtube"></i></a>
             </div>
