--- a/tour/index.html
+++ b/tour/index.html
@@ -107,43 +107,12 @@
     </div>
 
     <div class="tour-list">
-        <a href="http://www.ticketweb.com/t3/sale/SaleEventDetail?dispatch=loadSelectionData&eventId=7251535&pl=webhall&REFID=whsite" target="_blank" style="background-image: url('img/flyers/webster-hall-flyer.jpeg');">
-            <div class="overlay"></div>
-            <div class="content">
-                <h2>New York, NY</h2>
-                <h3>August 3rd <span>WEBSTER HALL</span></h3>
-            </div>
-        </a>
 
-        <a href="http://www1.ticketmaster.co.uk/070-shake-london-08-08-2017/event/1F0052CCBF0F99AF?f_tmol_checkout=true&ab=m_efeat5043v1" target="_blank" style="background-image: url('img/flyers/london-flyer.jpeg');">
+        <a href="http://www.dcflowerfest.com/#lineup" target="_blank" style="background-image: url('img/flyers/dcflowerfest-flyer.jpeg');">
             <div class="overlay"></div>
             <div class="content">
-                <h2>London, UK</h2>
-                <h3>August 8th, 2017 <span>XOYO</span></h3>
-            </div>
-        </a>
-
-        <a href="http://www.digitick.com/070-shake-radio-piiaf-fils-de-venus-concert-la-station-gare-des-mines-paris-10-aout-2017-css4-digitick-pg101-ri4808671.html" target="_blank" style="background-image: url('img/flyers/paris-flyer.jpeg');">
-            <div class="overlay"></div>
-            <div class="content">
-                <h2>Paris, France</h2>
-                <h3>August 10th, 2017 <span>La Station</span></h3>
-            </div>
-        </a>
-
-        <a href="http://www.ticketmaster.se/event/way-out-west-2017-tickets/451695?language=en-us" target="_blank" style="background-image: url('img/flyers/wow-flyer.jpeg');">
-            <div class="overlay"></div>
-            <div class="content">
-                <h2>Gothenburg, Sweden</h2>
-                <h3>August 11th, 2017 <span>Way Out West Music Festival</span></h3>
-            </div>
-        </a>
-
-        <a href="http://appelsap.net/festival/" target="_blank" style="background-image: url('img/flyers/apple-flyer.jpeg');">
-            <div class="overlay"></div>
-            <div class="content">
-                <h2>Amsterdam, Flevopark</h2>
-                <h3>August 12th <span>APPLESAP FESTIVAL</span></h3>
+                <h2>Washington, DC</h2>
+                <h3>September 16th <span>DC FLOWER FEST</span></h3>
             </div>
         </a>
 
@@ -156,6 +125,7 @@
                 <a href="https://070shake.com/music" target="_blank">MUSIC</a>
                 <a href="https://070shake.com/videos" target="_blank">VIDEOS</a>
                 <a href="https://shop.070shake.com" target="_blank">MERCH</a>
+                <a href="http://photos.070shake.com" target="_blank"> PHOTOS </a>
             </div>
 
             <h4 style="font-size: xx-small;">SITE DESIGNED BY <a href="https://www.twitter.com/yourmobilegeek"> ARIANA M. DAVIS </a> &amp; <a href="https://www.twitter.com/youngseebi"> SEBASTIAN ALSINA</a></h4>
@@ -167,7 +137,6 @@
                 <a href="https://soundcloud.com/shake-070" target="_blank"><i class="fa fa-soundcloud"></i></a>
                 <a href="https://www.facebook.com/070shake" target="_blank"><i class="fa fa-facebook"></i></a>
                 <a href="https://play.spotify.com/artist/12Zk1DFhCbHY6v3xep2ZjI" target="_blank"><i class="fa fa-spotify"></i></a>
-                <a href="https://play.google.com/store/music/artist/070_Shake?id=Apbver3j4h5vx44q3ahwjumpdwe&hl=en" target="_blank"><i class="fa fa-play"></i></a>
                 <a href="https://itunes.apple.com/ca/artist/070-shake/id1097177293" target="_blank"><i class="fa fa-apple"></i></a>
                 <a href="https://www.youtube.com/channel/UC3rStlVNedljwUZgmAgrU0w" target="_blank"><i class="fa fa-youtube"></i></a>
             </div>
