--- a/videos/index.html
+++ b/videos/index.html
@@ -1,5 +1,3 @@
-<!-- www.alsina.xyz | Alchemically bonded by Sebastian Alsina (@youngseebi) -->
-
 <!doctype html>
 <html lang="en">
 
@@ -7,26 +5,58 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
+    <!--
+
+
+     ⌌                                                    ⌍
+          ___  _____  ___    ____   _   _     _     _  __ _____ 
+  / _ \|___  |/ _ \  / ___| | | | |   / \   | |/ /| ____|
+ | | | |  / /| | | | \___ \ | |_| |  / _ \  | ' / |  _|  
+ | |_| | / / | |_| |  ___) ||  _  | / ___ \ | . \ | |___ 
+  \___/ /_/   \___/  |____/ |_| |_|/_/   \_\|_|\_\|_____|
+                                                         
+
+       yourmobilegeek.tech ( @yourmobilegeek was here ) • made in florida
+       www.alsina.xyz | Alchemically bonded by Sebastian Alsina (@youngseebi)
+     ⌎                 
+  -->
+
+
     <!-- Page Information -->
-    <title>070Shake &raquo; Videos</title>
-    <meta name="author" content="Sebastian Alsina" />
-    <meta name="description" content="" />
-    <meta property="og:title" content="" />
-    <meta property="og:type" content="website" />
-    <meta property="og:url" content="" />
-    <meta property="og:image" content="" />
-    <meta property="og:description" content="" />
-    <meta name="twitter:card" value="summary">
+    <title> VIDEOS | 070 SHAKE </title>
+    <meta name="keywords" content="070 Shake , 070 , Project 070 , Shake The World , New Jersey , North Bergen , Tour , Tickets">
+    <meta property="og:title" content="070 SHAKE">
+    <meta property="og:description" content="070 SHAKE">
+    <meta property="og:url" content="http://www.070shake.com">
+    <meta property="og:site_name" content="070 SHAKE OFFICIAL SITE">
+    <meta property="og:type" content="website">
+    <meta name="twitter:url" content="http://www.070shake.com">
+    <meta name="twitter:title" content="070 SHAKE">
+    <meta property="og:image"        content="https://070shake.com/assets/starsphere.jpg">
+    <meta name="twitter:image"       content="https://070shake.com/assets/starsphere.jpg">
 
     <!-- CSS -->
     <link rel="stylesheet" href="../css/reset.css" type="text/css">
     <link rel="stylesheet" href="../css/master.css" type="text/css">
     <link rel="stylesheet" href="../css/main.css" type="text/css">
 
+     <!-- Favicon -->
+    <link rel="shortcut icon" href="../images/favicon.png" type="image/x-icon">
+    <link rel="apple-touch-icon-precomposed" sizes="57x57" href="/apple-touch-icon-57x57.png">
+    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="/apple-touch-icon-114x144.png">
+    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="/apple-touch-icon-72x72.png">
+    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="/apple-touch-icon-144x144.png">
+    <meta name="apple-mobile-web-app-title" content="070 - Shake The World">
+    <meta name="application-name" content="070 Shake">
+    <meta name="msapplication-TileColor" content="#5b3c70">
+    <meta name="msapplication-TileImage" content="/mstile-144x144.png">
+
     <!-- JS -->
     <script src="http://code.jquery.com/jquery-latest.min.js"></script>
     <script src="https://use.fontawesome.com/75be605ddf.js"></script>
     <script src="../js/master.js"></script>
+
+
 </head>
 
 <body>
@@ -73,6 +103,7 @@
                 <a href="https://070shake.com/music" target="_blank">MUSIC</a>
                 <a href="https://070shake.com/videos" target="_blank">VIDEOS</a>
                 <a href="https://shop.070shake.com" target="_blank">MERCH</a>
+                <a href="http://photos.070shake.com" target="_blank"> PHOTOS </a>
             </div>
 
             <h4 style="font-size: xx-small;">SITE DESIGNED BY <a href="https://www.twitter.com/yourmobilegeek"> ARIANA M. DAVIS </a> &amp; <a href="https://www.twitter.com/youngseebi"> SEBASTIAN ALSINA</a></h4>
@@ -84,7 +115,6 @@
                 <a href="https://soundcloud.com/shake-070" target="_blank"><i class="fa fa-soundcloud"></i></a>
                 <a href="https://www.facebook.com/070shake" target="_blank"><i class="fa fa-facebook"></i></a>
                 <a href="https://play.spotify.com/artist/12Zk1DFhCbHY6v3xep2ZjI" target="_blank"><i class="fa fa-spotify"></i></a>
-                <a href="https://play.google.com/store/music/artist/070_Shake?id=Apbver3j4h5vx44q3ahwjumpdwe&hl=en" target="_blank"><i class="fa fa-play"></i></a>
                 <a href="https://itunes.apple.com/ca/artist/070-shake/id1097177293" target="_blank"><i class="fa fa-apple"></i></a>
                 <a href="https://www.youtube.com/channel/UC3rStlVNedljwUZgmAgrU0w" target="_blank"><i class="fa fa-youtube"></i></a>
             </div>
