--- a/music/index.html
+++ b/music/index.html
@@ -52,7 +52,7 @@
     <meta name="msapplication-TileImage" content="/mstile-144x144.png">
 
     <!-- JS -->
-    <script src="http://code.jquery.com/jquery-latest.min.js"></script>
+    <script src="https://code.jquery.com/jquery-latest.min.js"></script>
     <script src="https://use.fontawesome.com/75be605ddf.js"></script>
     <script src="../js/master.js"></script>
 </head>
